mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_generic_inference.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux run /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_generic_inference.mux`
error: Cannot infer type for empty list literal; use explicit type annotation (e.g., `list<int> myvar = {}`).
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_generic_inference.mux:2:14
   |
 2 | auto empty = []
   |              ^
